<resources>
    <string name="app_name">Open Space Weather Dashboard</string>
    <string name="c_class">C class</string>
    <string name="m_class">M class</string>
    <string name="x_class">X class</string>
    <string name="proton">Proton event</string>
    <string name="pca">PCA</string>
    <string name="percent">%1$s%%</string>
    <string name="goes_xray_chart_title">GOES X-Ray Flux</string>
    <string name="goes_xray_flux_axis_label">Flux</string>
    <string name="goes_xray_time_axis_label">Time (UTC)</string>
    <string name="watts_per_m2"><![CDATA[W&sdot;m<sup><small>&minus;2</small></sup>]]></string>
</resources>