<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="5dp"
    card_view:cardCornerRadius="4dp"
    card_view:theme="@style/Theme.MaterialComponents">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/goes_xray_chart_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.trestan.openspaceweatherdashboard.commons.RotatedTextView
                android:id="@+id/y_axis_label"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/goes_xray_flux_axis_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="16sp"/>


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="0dp"
                android:layout_marginBottom="5dp">
            </com.github.mikephil.charting.charts.LineChart>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/goes_xray_time_axis_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="16sp"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>